[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player/Knight/Knight.gd" type="Script" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Knight/knightHitbox.gd" type="Script" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music and Sounds/PlayerSounds.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Knight/sword_1/fall_back_1.png" type="Texture" id=6]
[ext_resource path="res://Player/Knight/sword_1/run_5.png" type="Texture" id=7]
[ext_resource path="res://WhiteShader.shader" type="Shader" id=8]
[ext_resource path="res://Player/Knight/sword_1/attack1_1.png" type="Texture" id=9]
[ext_resource path="res://Player/Knight/sword_1/hit_3.png" type="Texture" id=10]
[ext_resource path="res://Player/Knight/sword_1/attack4_5.png" type="Texture" id=11]
[ext_resource path="res://Player/Knight/sword_1/ready_3.png" type="Texture" id=12]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=13]
[ext_resource path="res://Player/Knight/sword_1/attack1_3.png" type="Texture" id=14]
[ext_resource path="res://Player/Knight/sword_1/attack1_2.png" type="Texture" id=15]
[ext_resource path="res://Player/Knight/sword_1/attack1_4.png" type="Texture" id=16]
[ext_resource path="res://Player/Knight/sword_1/attack1_5.png" type="Texture" id=17]
[ext_resource path="res://Player/Knight/sword_1/attack1_6.png" type="Texture" id=18]
[ext_resource path="res://Player/Knight/sword_1/jump_5.png" type="Texture" id=19]
[ext_resource path="res://Player/Knight/sword_1/jump_4.png" type="Texture" id=20]
[ext_resource path="res://Player/Knight/sword_1/jump_3.png" type="Texture" id=21]
[ext_resource path="res://Player/Knight/sword_1/jump_1.png" type="Texture" id=22]
[ext_resource path="res://Player/Knight/sword_1/jump_2.png" type="Texture" id=23]
[ext_resource path="res://Player/Knight/sword_1/fall_back_2.png" type="Texture" id=24]
[ext_resource path="res://Player/Knight/sword_1/fall_back_3.png" type="Texture" id=25]
[ext_resource path="res://Player/Knight/sword_1/fall_back_4.png" type="Texture" id=26]
[ext_resource path="res://Player/Knight/sword_1/fall_back_5.png" type="Texture" id=27]
[ext_resource path="res://Player/Knight/sword_1/hit_1.png" type="Texture" id=28]
[ext_resource path="res://Player/Knight/sword_1/hit_2.png" type="Texture" id=29]
[ext_resource path="res://Player/Knight/sword_1/ready_2.png" type="Texture" id=30]
[ext_resource path="res://Player/Knight/sword_1/attack4_2.png" type="Texture" id=31]
[ext_resource path="res://Player/Knight/sword_1/attack4_4.png" type="Texture" id=32]
[ext_resource path="res://Player/Knight/sword_1/ready_1.png" type="Texture" id=33]
[ext_resource path="res://Player/Knight/sword_1/attack4_1.png" type="Texture" id=34]
[ext_resource path="res://Player/Knight/sword_1/attack4_3.png" type="Texture" id=35]
[ext_resource path="res://Player/Knight/sword_1/attack4_6.png" type="Texture" id=36]
[ext_resource path="res://Player/Knight/sword_1/run_1.png" type="Texture" id=37]
[ext_resource path="res://Player/Knight/sword_1/run_4.png" type="Texture" id=38]
[ext_resource path="res://Player/Knight/sword_1/run_6.png" type="Texture" id=39]
[ext_resource path="res://Player/Knight/sword_1/run_3.png" type="Texture" id=40]
[ext_resource path="res://Player/Knight/sword_1/run_2.png" type="Texture" id=41]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 30 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 11 ), ExtResource( 36 ) ],
"loop": false,
"name": "ranged attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "Dashing",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 7 ), ExtResource( 39 ) ],
"loop": true,
"name": "running",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 10 ) ],
"loop": true,
"name": "Take Hit",
"speed": 20.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 2.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.4862, 16.9257 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.34737
height = 14.7671

[node name="Knight" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( 320.594, 209.839 )
scale = Vector2( 1.6, 1.6 )
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0.686707, -4.13789 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 2 )
animation = "running"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.712784, -2.99665 )
scale = Vector2( 1, 2 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]

[node name="SwordHitbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 450.671, 290.265 )
rotation = 3.14159
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="SwordHitbox" index="0"]
position = Vector2( 429.84, 290.266 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 4 )
disabled = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 393.903, 287.551 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -395.909, -292.248 )
shape = SubResource( 5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 2.51984, -2.51984 )
remote_path = NodePath("../Camera2D")

[node name="SFX" parent="." instance=ExtResource( 5 )]
position = Vector2( -89.5, -89.5 )

[node name="Attack" parent="SFX" index="0"]
volume_db = -20.0

[node name="Hit" parent="SFX" index="2"]
volume_db = -20.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2.51984, -2.51984 )
scale = Vector2( 1, 1 )
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 20.0
script = ExtResource( 13 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="hit_animationFinished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="attack_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="SwordHitbox"]

[editable path="Hurtbox"]

[editable path="SFX"]
